--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 
 <body>
-    <h1>Xin chào GitHub Pages! 👋</h1>
-    <p>Đây là website đầu tiên của tôi chạy online bằng GitHub Pages.</p>
+    <h1>Xin chào Tùm lum Tà laaa! 👋</h1>
+    <p>Đây là website làm khùng làm điên vậy nè 🐽.</p>
 </body>
 
 </html>
